crates/pina_cpi_renderer/src/snapshots/pina_cpi_renderer____tests__vesting_cancel_instruction_snapshot.snap
---
source: crates/pina_cpi_renderer/src/__tests.rs
expression: "render_fixture_instruction(\"vesting_program\", \"cancel\")"
---
#![allow(rustdoc::broken_intra_doc_links)]

use pina::AccountView;
use pina::CpiContext;
use pina::CpiHandle;
use pina::ProgramResult;
use pina::ProgramError;
use pina::Signer;

use crate::ProgramAccount;

/// CPI call for the `cancel` instruction.
#[derive(Clone, Copy, Debug)]
#[must_use = "the CPI has no effect until invoke or invoke_signed is called"]
pub struct Cancel<'account> {
	/// CPI account `admin`.
	/// Required privileges: writable and signer.
	pub admin: &'account AccountView,

	/// CPI account `mint`.
	/// Required privileges: read-only.
	pub mint: &'account AccountView,

	/// CPI account `vestingState`.
	/// Required privileges: writable.
	pub vesting_state: &'account AccountView,

	/// CPI account `adminAta`.
	/// Required privileges: writable.
	pub admin_ata: &'account AccountView,

	/// CPI account `vault`.
	/// Required privileges: writable.
	pub vault: &'account AccountView,

	/// CPI account `associatedTokenProgram`.
	/// Required privileges: read-only.
	pub associated_token_program: &'account AccountView,

	/// CPI account `systemProgram`.
	/// Required privileges: read-only.
	pub system_program: &'account AccountView,

	/// CPI account `tokenProgram`.
	/// Required privileges: read-only.
	pub token_program: &'account AccountView,

	/// CPI account `clock`.
	/// Clock for the vested-entitlement settlement: cancellation must not
	/// confiscate what the linear curve has already released.
	/// Required privileges: read-only.
	pub clock: &'account AccountView,

	/// CPI account `beneficiaryAta`.
	/// The beneficiary's ATA: the vested-but-unclaimed amount settles here
	/// before any remainder returns to the administrator. It is mutable
	/// because the settlement transfer credits it.
	/// Required privileges: writable.
	pub beneficiary_ata: &'account AccountView,

	/// Instruction arguments encoded and sent as CPI data for `cancel`.
	pub ix: CancelIx,
}

/// Instruction arguments for the `cancel` CPI call.
#[derive(Clone, Copy, Debug, Default)]
pub struct CancelIx;

impl CancelIx {
	/// Number of bytes in the encoded instruction, including its discriminator.
	pub const LEN: usize = 1;

	/// Encodes the discriminator and instruction arguments for CPI.
	#[inline(always)]
	pub fn to_bytes(&self) -> Result<[u8; 1], ProgramError> {
		let mut data = [0u8; 1];
		data[..1].copy_from_slice(&CANCEL_DISCRIMINATOR);

		Ok(data)
	}
}

impl<'account> Cancel<'account> {
	/// Invokes the instruction with no PDA seeds.
	#[inline(always)]
	pub fn invoke(&self, program: &ProgramAccount<'_>) -> ProgramResult {
		self.invoke_signed(program, &[])
	}

	/// Invokes the instruction, signing with the provided PDA seeds.
	#[inline(always)]
	pub fn invoke_signed(
		&self,
		program: &ProgramAccount<'_>,
		signers: &[Signer<'_, '_>],
	) -> ProgramResult {
		let accounts: [CpiHandle<'_>; 10] = [
			CpiHandle::writable_signer(self.admin)?,
			CpiHandle::readonly(self.mint),
			CpiHandle::writable(self.vesting_state)?,
			CpiHandle::writable(self.admin_ata)?,
			CpiHandle::writable(self.vault)?,
			CpiHandle::readonly(self.associated_token_program),
			CpiHandle::readonly(self.system_program),
			CpiHandle::readonly(self.token_program),
			CpiHandle::readonly(self.clock),
			CpiHandle::writable(self.beneficiary_ata)?,
		];
		let data = self.ix.to_bytes()?;
		let context = CpiContext::new(*program, accounts);

		context.invoke_signed(&data, signers)
	}
}

const CANCEL_DISCRIMINATOR: [u8; 1] = [2];
