crates/pina_cpi_renderer/src/snapshots/pina_cpi_renderer____tests__vesting_initialize_instruction_snapshot.snap
---
source: crates/pina_cpi_renderer/src/__tests.rs
expression: "render_fixture_instruction(\"vesting_program\", \"initialize\")"
---
#![allow(rustdoc::broken_intra_doc_links)]

use pina::AccountView;
use pina::CpiContext;
use pina::CpiHandle;
use pina::ProgramResult;
use pina::ProgramError;
use pina::Signer;

use crate::ProgramAccount;

/// CPI call for the `initialize` instruction.
#[derive(Clone, Copy, Debug)]
#[must_use = "the CPI has no effect until invoke or invoke_signed is called"]
pub struct Initialize<'account> {
	/// CPI account `admin`.
	/// Required privileges: writable and signer.
	pub admin: &'account AccountView,

	/// CPI account `beneficiary`.
	/// Required privileges: read-only.
	pub beneficiary: &'account AccountView,

	/// CPI account `mint`.
	/// Required privileges: read-only.
	pub mint: &'account AccountView,

	/// CPI account `vestingState`.
	/// Required privileges: writable.
	pub vesting_state: &'account AccountView,

	/// CPI account `vault`.
	/// Required privileges: writable.
	pub vault: &'account AccountView,

	/// CPI account `adminAta`.
	/// The admin's source ATA: a schedule becomes active only by moving its
	/// whole allocation into the vault in this same instruction, so a
	/// valid-looking schedule can never promise value it does not hold. It is
	/// mutable because the transfer debits it.
	/// Required privileges: writable.
	pub admin_ata: &'account AccountView,

	/// CPI account `associatedTokenProgram`.
	/// Required privileges: read-only.
	pub associated_token_program: &'account AccountView,

	/// CPI account `systemProgram`.
	/// Required privileges: read-only.
	pub system_program: &'account AccountView,

	/// CPI account `tokenProgram`.
	/// Required privileges: read-only.
	pub token_program: &'account AccountView,

	/// Instruction arguments encoded and sent as CPI data for `initialize`.
	pub ix: InitializeIx,
}

/// Instruction arguments for the `initialize` CPI call.
#[derive(Clone, Copy, Debug)]
pub struct InitializeIx {
	/// Instruction argument `totalAmount`.
	pub total_amount: u64,

	/// Instruction argument `startTs`.
	pub start_ts: u64,

	/// Instruction argument `cliffTs`.
	pub cliff_ts: u64,

	/// Instruction argument `endTs`.
	pub end_ts: u64,

	/// Instruction argument `bump`.
	pub bump: u8,
}

impl InitializeIx {
	/// Number of bytes in the encoded instruction, including its discriminator.
	pub const LEN: usize = 34;

	/// Encodes the discriminator and instruction arguments for CPI.
	#[inline(always)]
	pub fn to_bytes(&self) -> Result<[u8; 34], ProgramError> {
		let mut data = [0u8; 34];
		data[..1].copy_from_slice(&INITIALIZE_DISCRIMINATOR);
		data[1..9].copy_from_slice(&self.total_amount.to_le_bytes());
		data[9..17].copy_from_slice(&self.start_ts.to_le_bytes());
		data[17..25].copy_from_slice(&self.cliff_ts.to_le_bytes());
		data[25..33].copy_from_slice(&self.end_ts.to_le_bytes());
		data[33..34].copy_from_slice(&self.bump.to_le_bytes());

		Ok(data)
	}
}

impl<'account> Initialize<'account> {
	/// Invokes the instruction with no PDA seeds.
	#[inline(always)]
	pub fn invoke(&self, program: &ProgramAccount<'_>) -> ProgramResult {
		self.invoke_signed(program, &[])
	}

	/// Invokes the instruction, signing with the provided PDA seeds.
	#[inline(always)]
	pub fn invoke_signed(
		&self,
		program: &ProgramAccount<'_>,
		signers: &[Signer<'_, '_>],
	) -> ProgramResult {
		let accounts: [CpiHandle<'_>; 9] = [
			CpiHandle::writable_signer(self.admin)?,
			CpiHandle::readonly(self.beneficiary),
			CpiHandle::readonly(self.mint),
			CpiHandle::writable(self.vesting_state)?,
			CpiHandle::writable(self.vault)?,
			CpiHandle::writable(self.admin_ata)?,
			CpiHandle::readonly(self.associated_token_program),
			CpiHandle::readonly(self.system_program),
			CpiHandle::readonly(self.token_program),
		];
		let data = self.ix.to_bytes()?;
		let context = CpiContext::new(*program, accounts);

		context.invoke_signed(&data, signers)
	}
}

const INITIALIZE_DISCRIMINATOR: [u8; 1] = [0];
